# avido

./: Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
avido/: Makefile  docker-entrypoint.sh  manage.py
avido/advertisement/: admin.py  enums.py  filters.py  models.py
avido/advertisement/migrations/: 0001_initial.py  0002_alter_advertisementimages_image.py
avido/api/: consts.py  permissions.py  serializers.py  urls.py  views.py
avido/api/fixtures/: advertisement.csv  advertisement_category.csv  city.csv  region.csv  user.csv
avido/api/management/commands/: load_test_data.py
avido/api/services/: avatar.py  check_image_size.py
avido/api/tests/: conftest.py  tests_ads.py  tests_user.py
avido/avido/: asgi.py  celery.py  elastic_config.py  settings.py  urls.py  wsgi.py
avido/users/: admin.py  db_utils.py  enums.py  models.py  tasks.py
avido/users/migrations/: 0001_initial.py  0002_user_avatar.py
